--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.10.3",
     "node": "^18.20.4",
     "nodemon": "^3.1.4",
+    "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
