--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.4",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
